--- a/.semaphore/pipeline_2.yml
+++ b/.semaphore/pipeline_2.yml
@@ -1,14 +1,14 @@
 version: v1.0
-name: Pipeline 2
+name: Dockerize pipeline
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: Docker build
+  - name: Dockerize
     task:
       jobs:
-        - name: Dockerize pipeline
+        - name: Docker build
           commands:
             - 'echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin'
             - 'docker pull $DOCKER_USERNAME/django-markdown-editor:latest || true'
