--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -42,3 +42,5 @@ blocks:
 promotions:
   - name: Dockerize
     pipeline_file: pipeline_2.yml
+    auto_promote:
+      when: branch = 'arokasa_test_branch' AND result = 'passed'
